# image-classification-with-local-vlms

./: .gitignore  COMING_SOON.md  README.md
ImageClassifier/: ImageClassifierApp.swift  Model.swift
ImageClassifier.xcodeproj/: project.pbxproj
ImageClassifierTests/: ImageClassifierTests.swift
ImageClassifierUITests/: ImageClassifierUITests.swift  ImageClassifierUITestsLaunchTests.swift
image-to-json/: Makefile  README.md  maker_label_mapping.json  pyproject.toml  stanford_cars_classes.json
image-to-json/configs/: cats_vs_dogs_v0.yaml  cats_vs_dogs_v1.yaml  cats_vs_dogs_v2.yaml  cats_vs_dogs_v3.yaml  cats_vs_dogs_v4.yaml  finetune_cars_v4.yaml  finetune_cats_vs_dogs.yaml  human_action_recognition_v0.yaml  human_action_recognition_v1.yaml  standford_cars_v0.yaml  standford_cars_v1.yaml  standford_cars_v2.yaml  stanford_cars_checkpoint_100.yaml  stanford_cars_checkpoint_1000.yaml  stanford_cars_checkpoint_200.yaml  stanford_cars_checkpoint_300.yaml  stanford_cars_checkpoint_400.yaml  stanford_cars_checkpoint_500.yaml  stanford_cars_checkpoint_600.yaml  stanford_cars_checkpoint_800.yaml  stanford_cars_checkpoint_900.yaml  stanford_cars_v0.yaml  stanford_cars_v1.yaml  stanford_cars_v2.yaml
image-to-json/notebooks/: visualize_results.ipynb
image-to-json/scripts/: generate_cars_dataset.py  generate_train_test_split_datasets.py  inspect_dataset.py
image-to-json/src/image_to_json/: __init__.py  callbacks.py  config.py  data_preparation.py  debug.py  evaluate.py  fine_tune.py  inference.py  loaders.py  modal_infra.py  output_types.py  paths.py  peft.py  report.py  types.py  utils.py
image-to-json/src/image_to_json/dspy_examples/: miprov2_on_gsm8k.py
ios-app/ImageClassifier/: ContentView.swift
lessons/: part_4_car_maker_detection.md
